--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ flake8==3.8.4
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
+python-dotenv==0.15.0
 regex==2020.11.13
 selenium==3.141.0
 soupsieve==2.1
