--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,5 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install black flake8 pytest
-    - name: Format with black
+    - name: Check code formatting
       run: black . --exclude=venv --check
+    - name: Check coding style
+      run: flake8 ./
