--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ appdirs==1.4.4
 beautifulsoup4==4.9.3
 black==20.8b1
 bs4==0.0.1
+certifi==2020.11.8
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.4
+EasyProcess==0.3
 flake8==3.8.4
+idna==2.10
+loguru==0.5.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
@@ -11,10 +17,13 @@ psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
 python-dotenv==0.15.0
+PyVirtualDisplay==1.3.2
 regex==2020.11.13
+requests==2.25.0
 selenium==3.141.0
 soupsieve==2.1
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+win32-setctime==1.0.3
