ZDL-80: Include in configuration file to support dynamic CSS class

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ DB_PASS = "1"
 DB_USER = "postgres"
 DB_HOST = "localhost"
 DB_TABLE = "products_product"
+
+PRODUCT_CONTAINER = "<insert css class>"
+PRODUCT_DETAILS = "<insert css class>"
+PRODUCT_CATEGORY = "<insert css class>"
+PRODUCT_PRICE = "<insert css class>"
+PRODUCT_DESCRIPTION = "<insert css class>"
+PRODUCT_PHOTOS = "<insert css class>"
+PRODUCT_DETAIL_PHOTO = "<insert css class>"
+PRODUCT_NAME = "<insert css class>"
