--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,8 +18,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black flake8 pytest
+        pip install black flake8 pytest isort
     - name: Check code formatting
       run: black . --exclude=venv --check
+    - name: Check isort imports
+      run: isort . --check-only --profile=black
     - name: Check coding style
       run: flake8 ./
