--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,44 @@
 appdirs==1.4.4
+attrs==23.1.0
 beautifulsoup4==4.9.3
-black==20.8b1
+black==23.7.0
 bs4==0.0.1
-certifi==2020.11.8
+certifi==2023.5.7
 chardet==3.0.4
-click==7.1.2
+click==8.1.6
 colorama==0.4.4
 EasyProcess==0.3
+exceptiongroup==1.1.2
 flake8==3.8.4
+h11==0.14.0
 idna==2.10
+isort==5.12.0
 loguru==0.5.3
 mccabe==0.6.1
-mypy-extensions==0.4.3
-pathspec==0.8.1
-psycopg2-binary==2.8.6
+mypy-extensions==1.0.0
+outcome==1.2.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.9.1
+psycopg2-binary==2.9.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
+PySocks==1.7.1
 python-dotenv==0.15.0
 PyVirtualDisplay==1.3.2
 regex==2020.11.13
 requests==2.25.0
-selenium==3.141.0
+selenium==4.9.1
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.1
 toml==0.10.2
-typed-ast==1.4.1
+trio==0.22.2
+trio-websocket==0.10.3
+typed-ast==1.5.5
 typing-extensions==3.7.4.3
+undetected-chromedriver==3.5.0
 urllib3==1.26.2
+websockets==11.0.3
 win32-setctime==1.0.3
+wsproto==1.2.0
